# lightning-pass

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  conf.py  pyproject.toml  requirements.txt  run.py  tox.ini
.github/workflows/: codeql.yml
lightning_pass/: __init__.py  __main__.py  settings.py
lightning_pass/gui/: __init__.py  boxes.py  events.py  gui.py  gui2.py  message_boxes.py  mouse_randomness.py  window.py
lightning_pass/gui/gui_config/: __init__.py  buttons.py  event_decorators.py  events.py  utils.py  widget_data.py  widgets.py
lightning_pass/gui/gui_util/: __init__.py  event_decorators.py  widgets.py
lightning_pass/gui/mouse_randomness/: mouse_tracker.py
lightning_pass/gui/static/: __init__.py
lightning_pass/gui/static/qt_designer/: __init__.py  main.ui  splash_screen.ui  vault_widget.ui
lightning_pass/gui/static/qt_designer/output/: __init__.py  main.py  splash_screen.py  vault_widget.py
lightning_pass/gui/users/: login.py
lightning_pass/password_generator/: collector.py  generator.py
lightning_pass/users/: __init__.py  account.py  exceptions.py  login.py  password_hashing.py  register.py  utils.py  vault.py  vaults.py
lightning_pass/util/: __init__.py  credentials.py  database.py  exceptions.py  regex.py  util.py  utils.py  validators.py
tests/: pytest.ini  test_account.py  test_gui.py  test_users.py  test_util.py  test_validators.py
tests/gui/: test_gui.py
tests/test_gui/: test_gui.py
