[tool.poetry]
name = "Lightning Pass"
version = "0.1.0"
description = "Lightning Pass - password generator and account manager"
authors = ["Lukas Kucera"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
