[tool.poetry]
name = "Lightning Pass"
version = "0.1.0"
description = "Lightning Pass - password generator and account manager"
authors = ["Lukas Kucera"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
clipboard = "^0.0.4"
QDarkStyle = "^2.8.1"
bcrypt = "^3.2.0"
python-dotenv = "^0.15.0"
mysql-connector-python = "^8.0.23"
yagmail = "^0.14.245"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-qt = "^3.3.0"
pytest-mysql = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
